--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,9 @@ h1 {
   font-size: 24px;
   margin-left: 80px;
   margin-right: 80px;
+  padding: 20px;
+  border: 3px solid gray;
+  border-radius: 20px;
 }
 
 .mainDist {
